k8s/gog-parser-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gog-parser-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gog-parser
  template:
    metadata:
      labels:
        app: gog-parser
    spec:
      containers:
        - image: tjasad/rso-gog-parser:2023-01-07-16-48-48
          name: gog-parser
          resources:
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: gog-parser
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: gog-parser
