k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-gamer-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /gog-parser
            pathType: Prefix
            backend:
              service:
                name: gog-parser
                port:
                  number: 8080
          - path: /game-data
            pathType: Prefix
            backend:
              service:
                name: game-data
                port:
                  number: 8080
          - path: /steam-parser
            pathType: Prefix
            backend:
              service:
                name: steam-parser
                port:
                  number: 9000
          - path: /store-comparator
            pathType: Prefix
            backend:
              service:
                name: store-comparator
                port:
                  number: 8080

#kubectl get ingress
